# cmake-sdl2-opengl-imgui

./: CMakeLists.txt  README.md  compile_commands.json
doc/: COMPILE
inc/: main.hpp
src/: main.cpp
